fix: address loop-1 review — exception hierarchy, internal package, restore setStatusMessage
Fixes the headline correctness bug (ApifyApiException now extends ApifyClientException) and a
PaginationList NPE on "items": null. Hides implementation plumbing behind a non-exported
com.apify.client.internal package with a module-info.java, restores ApifyClient.setStatusMessage
(the prior removal was based on a false claim about the reference client), and removes the
duplicated AI-disclaimer from the 10 docs pages. Also covers the accumulated code-quality, docs,
changelog, test-coverage, parity-gap and issue #8 follow-ups from the review; see notes.md
"Implementer — loop 2" for the itemized list and the explicit skip-with-justification entries.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01HuTYpvY6WkVvmsXzupzEk9